# SmartStay

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/booking/: __init__.py  dependencies.py  graph.py  language.py  nodes.py  routing.py  schemas.py  state.py  travel_orchestrator.py
backend/app/ai/: __init__.py  gemini_client.py  generator.py  prompt_loader.py
backend/app/api/V1/: bookings.py  chat.py  flights.py  health.py  hotels.py  users.py
backend/app/core/: agent.py  config.py  limiter.py  llm.py  logging.py  metrics.py  middleware.py
backend/app/db/: booking_repository.py  database.py  models.py  repository.py  user_profile_repository.py
backend/app/models/: __init__.py  booking.py  user.py  user_profile.py
backend/app/schemas/: __init__.py  base.py  bookings.py  chat.py  flights.py  hotels.py  user.py
backend/app/services/: liteapi_flights_service.py  liteapi_hotels_service.py  liteapi_service.py  swiftrouter.py
backend/docs/: architecture.md
backend/scripts/: test_postgres_connection.py
backend/tests/: conftest.py
backend/tests/integration/: test_graph_hotel_flow.py  test_graph_multiturn.py  test_graph_orchestrator.py
backend/tests/unit/: test_language.py  test_liteapi_booking_services.py  test_liteapi_service.py  test_nodes_hotel.py  test_nodes_search.py  test_provider_fallback.py  test_routing.py  test_sequential_trip_routing.py  test_state_merge.py  test_user_profile_sync.py
(+74 files in other folders)
