[project]
name = "my-fastapi-boilerplate"
version = "0.1.0"
description = "Learning FastAPI boilerplate from scratch"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "email-validator",
    "redis",
    "arq",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "langchain-groq",
    "langchain-mcp-adapters",
    "langgraph",
    "langgraph-checkpoint-redis",
    "langchain-elasticsearch",
    "elasticsearch>=8,<9",
    "aiohttp",
    "prometheus-client",
    "slowapi",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
